# MRM_AditiArun

./: Task_1.md  hello world.py  task_3.txt  task_4_5.txt
ERC/: frames_2024-07-09_09.43.16.gv  frames_2024-07-10_12.37.02.gv  frames_2024-07-10_13.44.19.gv
ERC/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ERC/leo_nodes/: package.xml  setup.cfg  setup.py
ERC/leo_nodes/config/: controllers.yaml
ERC/leo_nodes/config/zed2/: left_cam_imu_transform.yaml
ERC/leo_nodes/leo_nodes/: ground_truth_filter.py  odom_compat_node.py  zed2_imu_transform_publisher.py
ERC/leo_rover/: CMakeLists.txt
ERC/leo_rover/config/: ekf.yaml
ERC/leo_rover/install/: local_setup.sh  setup.sh
ERC/leo_rover/launch/: new.launch.xml  temp.launch.xml  xmlTest.launch.xml
ERC/leo_rover/log/: latest_build
ERC/leo_rover/models/marsyard2022_terrain/: model.sdf
ERC/leo_rover/params/: nav2_params.yaml
ERC/leo_rover/urdf/: leo.xacro  leo_erc.urdf.xacro  leo_erc.xacro  leo_erc_sim.urdf  leo_erc_sim.urdf.xacro  probe.urdf  rover.gazebo  rover.urdf  rover.xacro  zed2.xacro
ERC/leo_rover/worlds/: marsyard2022.world
ERC/leo_worlds/: package.xml  setup.cfg  setup.py
ERC/leo_worlds/models/marsyard2022_terrain/: model.sdf
ERC/leo_worlds/worlds/: marsyard2022.world  marsyard2022.world.xacro
ERC/log/: latest_build
ERC/pcl_ground_removal/: CMakeLists.txt
ERC/pcl_ground_removal/install/: local_setup.sh
ERC/pcl_ground_removal/install/pcl_ground_removal/share/pcl_ground_removal/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ERC/pcl_ground_removal/log/: latest_build
ERC/pcl_ground_removal/src/: object_detection_node.cpp
Machine learning Course/: Assignment1.ipynb  Building_your_Deep_Neural_Network_Step_by_Step.ipynb  Coursera ml certificatepdf  Deep Neural Network - Application.ipynb  Gradient_Checking.ipynb  Initialization.ipynb  Optimization_methods.ipynb  Planar_data_classification_with_one_hidden_layer.ipynb  Regularization.ipynb  Tensorflow_introduction.ipynb
ROS_task/: pcl.cpp
ROS_task/GP/: gps.cpp  obstacle.cpp
ROS_task/chatroom/: package.xml
ROS_task/chatroom/launch/: chatroom.launch
ROS_task/chatroom/msg/: ChatMessage.msg
ROS_task/chatroom/src/: chat_subscriber.cpp  user2_node.cpp
chatroom/: CMakeLists.txt
chatroom/src/: user1_node.cpp  user3_node.cpp
machine learning task/: Logistic regression.ipynb  MNIST.ipynb  Mnist.ipynb  Softmax.ipynb  linear regression.ipynb  log try.ipynb  logistic regression.ipynb
opencv/: TENNIS BALL final.py
pcl_ground_removal/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
pcl_ground_removal/src/: ground_removal_node.cpp
robot1_ws/: imu_data.csv  recorded_video.avi
robot1_ws/devel/: .catkin  .rosinstall
robot1_ws/devel/include/rover/: ToggleIMURepresentation.h  ToggleIMURepresentationRequest.h  ToggleIMURepresentationResponse.h
robot1_ws/devel/lib/pkgconfig/: rover.pc
robot1_ws/devel/lib/rover/: gps  gps_node  gui.py  guii.py  imu_representation_server.py  obstacle  pcl
robot1_ws/src/rover/: CMakeLists.txt
robot1_ws/src/rover/config/: robot.rviz
robot1_ws/src/rover/launch/: gazebo.launch  gazebo1.world  gps.launch  obstacle.launch  rover_simulation.launch
robot1_ws/src/rover/src/: gps.cpp  guii.py  obstacle.txt  pcl.cpp
robot1_ws/src/rover/srv/: ToggleIMURepresentation.srv
robot1_ws/src/rover/urdf/: camera.xacro  (+4 more)
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/cashier_system/share/cashier_system/: local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/cashier_system/share/cashier_system/cmake/: cashier_systemConfig.cmake
ros2_ws/log/: latest_build
ros2_ws/src/cashier_system/: CMakeLists.txt  package.xml
ros2_ws/src/cashier_system/src/: printer_node.cpp  publisher_node.cpp  subscriber_node.cpp
socket/: guii.py  imu_representation_server.py
(+58 files in other folders)
